<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout_main_activity"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.test2.MainActivity" >

    <TextView
        android:id="@+id/linearLayout_textview1_registration_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration" 
        android:textSize="24sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/linearLayout_edittext1_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name" />
    
	<EditText
        android:id="@+id/linearLayout_edittext2_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress" />
	
	<EditText
        android:id="@+id/linearLayout_edittext3_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_no"
        android:inputType="phone" />
    
    <EditText
        android:id="@+id/linearLayout_edittext4_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/linearLayout_edittext5_re_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/re_type_password"
        android:inputType="textPassword" />
    
    <Button
        android:id="@+id/linearLayout_button1_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />

</LinearLayout>
