<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout_main_activity"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.test2.MainActivity" >

    <TextView
        android:id="@+id/linearLayout_textview1_anyCleanIn_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/any_clean_in" 
        android:textSize="24sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/linearLayout_edittext1_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_id" />

    <EditText
        android:id="@+id/linearLayout_edittext2_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/linearLayout_button1_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />
    
    <TextView
        android:id="@+id/linearLayout_textview2_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up" />
    
    <TextView
        android:id="@+id/linearLayout_textview3_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password" />

</LinearLayout>